--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.6)
 
-include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
+add_subdirectory(Components)
 
 set(SOURCE_FILES Renderer.cpp Renderer.h)
 add_library(Renderer ${SOURCE_FILES})
+target_link_libraries(Renderer Components)
+
 
